--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Sup.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+
+    <!-- Bootstrap imports -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!-- Bootstrap imports -->
+
+    <!-- Fullpage imports -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.2/jquery.fullPage.js"></script>
+    <!-- Fullpage imports -->
+
+    <!-- Fullpage initialization -->
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $('#fullpage').fullpage();
+      });
+    </script>
+    <!-- Fullpage initialization -->
+
+  </head>
+
+  <body>
+
+    <!-- Fullpage wrapper -->
+    <div id="fullpage">
+      <!-- General Info -->
+      <div class="section">
+        Sup.
+      </div>
+      <!-- General Info -->
+
+      <!-- Education -->
+      <div class="section">
+        Supp.
+      </div>
+      <!-- Education -->
+
+      <!-- General Skills -->
+      <div class="section">
+        Suppp.
+      </div>
+      <!-- General Skills -->
+
+      <!-- Programming Skills -->
+      <div class="section">
+        Supppp.
+      </div>
+      <!-- Programming Skills -->
+
+      <!-- Projects -->
+      <div class="section">
+        Suppppp.
+      </div>
+      <!-- Projects -->
+
+    </div>
+    <!-- Fullpage wrapper -->
+
+  </body>
+</html>
