--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
 
     <!-- Fullpage initialization -->
     <script type="text/javascript">
-      $(document).ready(function() {
-        $('#fullpage').fullpage();
-      });
+    $(document).ready(function() {
+      $('#fullpage').fullpage();
+    });
     </script>
     <!-- Fullpage initialization -->
+
+    <!-- Box styling -->
+    <style>
+    .container {
+      width: 80%;
+      height: 80%;
+      margin-left: 10%;
+      margin-right: 10%;
+      margin-top: 10%;
+      margin-bottom: 10%;
+      background-color: black;
+    }
+    </style>
+    <!-- Box styling -->
 
   </head>
 
@@ -30,31 +44,36 @@
     <div id="fullpage">
       <!-- General Info -->
       <div class="section">
-        Sup.
+        <div id="general-info" class="container">
+        </div>
       </div>
       <!-- General Info -->
 
       <!-- Education -->
       <div class="section">
-        Supp.
+        <div id="general-info" class="container">
+        </div>
       </div>
       <!-- Education -->
 
       <!-- General Skills -->
       <div class="section">
-        Suppp.
+        <div id="general-info" class="container">
+        </div>
       </div>
       <!-- General Skills -->
 
       <!-- Programming Skills -->
       <div class="section">
-        Supppp.
+        <div id="general-info" class="container">
+        </div>
       </div>
       <!-- Programming Skills -->
 
       <!-- Projects -->
       <div class="section">
-        Suppppp.
+        <div id="general-info" class="container">
+        </div>
       </div>
       <!-- Projects -->
 
