[v0.4] Education section added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
     }
     /* Profile pic */
 
+    /* University logos */
+    .uni-logo {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      display: block;
+      margin: auto;
+      margin-bottom: 10%;
+      margin-top: 10%;
+    }
+    /* University logos */
+
+    /* Education section margins *
+    .list-item-edu {
+      margin-top: 10%;
+      margin-bottom: 10%;
+    }
+    /* Education section margins */
+
     /* Text */
     .center-text {
         margin: auto;
@@ -90,6 +109,36 @@
       <!-- Education -->
       <div class="section">
         <div id="general-info" class="container">
+          <div class="row">
+            <div class="center-text">
+              <h1>Education</h1>
+            </div>
+          </div>
+
+          <div class="row list-item-edu">
+            <div class="col-md-4">
+              <img class="uni-logo" src="res/ufpb-logo.png">
+            </div>
+            <div class="col-md-8">
+              <div class="justify-text">
+                <h2>Bachelor's</h2>
+                <h3>Computer Engineering - Federal University of Paraíba</h3>
+                <p><b>Status:</b> In course, 72% complete</p>
+              </div>
+            </div>
+          </div>
+          <div class="row list-item-edu">
+            <div class="col-md-4">
+              <img class="uni-logo" src="res/kth-logo.jpg">
+            </div>
+            <div class="justify-text">
+              <h2>Master's</h2>
+              <h3>Human-Computer Interaction & Design- Kungliga Tekniska Högskolan</h3>
+              <p><b>Status:</b> Paused, 50% complete</p>
+            </div>
+            <div class="col-md-8">
+            </div>
+          </div>
         </div>
       </div>
       <!-- Education -->
