--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
             margin-top: 10px;
             margin-bottom: 10px;
         }
+        .right-text {
+            margin: auto;
+            text-align: right;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
         /* Text */
     </style>
     </head>
@@ -155,13 +161,17 @@
                         <img id="profile-pic" src="res/profile.jpg">
                     </div>
                     
-                    <div class="row center-text">
-                        <h1>Lucas P. Corrêa</h1>
-                    </div>
+                    <div class="row" style="margin-top:50px;">
+                        <div class="col-md-8">
+                            <div class="row right-text">
+                                <h1>Lucas P. Corrêa</h1>
+                            </div>
                     
-                    <div class="row justify-text" style="margin-top: 90px;">
-                        <p>Placeholder text for general description</p>
-                    </div>
+                            <div class="row right-text" style="margin-top: 40px;">
+                                <h4>Innovation-driven engineer.<br>Independent developer and eager creator during free time.</h4>
+                            </div>
+                        </div>
+                    </div> 
                 </div>
             </div>
             <!-- General Info -->
