--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
             margin-bottom: 10px;
             margin-top: 10px;
         }
+        .line {
+            height: 10px;
+            width: 100%;
+            margin-top: 95px;
+            margin-bottom: 95px;
+        }
         /* Profile pic */
 
         /* University logos */
@@ -157,14 +163,22 @@
             <!-- General Info -->
             <div class="section">
                 <div class="container">
-                    <div class="row">
-                        <img id="profile-pic" src="res/profile.jpg">
+                    <div class="row" style="margin-top:30px;">
+                        <div class="col-md-5">
+                            <img class="line" src="res/line.png">
+                        </div>
+                        <div class="col-md-2">
+                            <img id="profile-pic" src="res/profile.jpg">
+                        </div>
+                        <div class="col-md-5">
+                            <img class="line" src="res/line.png">
+                        </div>
                     </div>
                     
-                    <div class="row" style="margin-top:50px;">
-                        <div class="col-md-8">
+                    <div class="row" style="margin-top:20px;">
+                        <div class="col-md-7">
                             <div class="row right-text">
-                                <h1>Lucas P. Corrêa</h1>
+                                <h2>Lucas P. Corrêa</h2>
                             </div>
                     
                             <div class="row right-text" style="margin-top: 40px;">
