--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         .nav-item .active {
             background: rgba(242, 242, 242, 1.0);
         }
-        .nav-link .active {
+        .active a {
             color: #303030;
         }
         .navbar .nav-link:hover:not(.active) {
