--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
                                 <h4 style="margin-top:10px;">Independent developer and eager creator during free time.</h4>
                             </div>
                             <div class="row" style="margin-top:30px; margin-right: 4px;">
-                                <a href="https://br.linkedin.com/pub/lucas-corr%C3%AAa/119/515/3b8" style="text-decoration:none;"><img class="network" src="res/linkedin.png" align="right"></a>
+                                <a href="https://br.linkedin.com/pub/lucas-corr%C3%AAa/119/515/3b8"><img class="network" src="res/linkedin.png" align="right"></a>
                                 
-                                <a href="https://github.com/lupcorrea" style="text-decoration:none;"><img class="network" src="res/github.png" align="right" style="margin-right:20px;"></a>
+                                <a href="https://github.com/lupcorrea"><img class="network" src="res/github.png" align="right" style="margin-right:20px;"></a>
                             </div>
                         </div>
                     </div> 
@@ -422,13 +422,13 @@
                             <div class="row">
                                 <div class="row">
                                     <div class="col-md-4">
-                                        <img class="project-panel" src="res/ct++.png">
+                                        <a href="https://github.com/lupcorrea/chess-tactics" class="project-panel"><img class="project-panel" src="res/ct++.png"></a>
                                     </div>
                                     <div class="col-md-4">
-                                        <img class="project-panel" src="res/curriculum.png">
+                                        <a href="https://github.com/lupcorrea/lupcorrea.github.io" class="project-panel"><img class="project-panel" src="res/curriculum.png"></a>
                                     </div>
                                     <div class="col-md-4">
-                                        <img class="project-panel" src="res/yow.png">
+                                        <a href="" class="project-panel"><img class="project-panel" src="res/yow.png"></a>
                                     </div>
                                 </div>
                             </div>
@@ -441,16 +441,16 @@
                             <div class="row">
                                 <div class="row">
                                     <div class="col-md-3">
-                                        <img class="project-panel" src="res/systemc.png">
+                                        <a href="https://github.com/search?utf8=✓&q=topic%3Asystemc+user%3Alupcorrea&type=Repositories&ref=advsearch&l=&l=" class="project-panel"><img class="project-panel" src="res/systemc.png"></a>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="project-panel" src="res/rasteriser.png">
+                                        <a href="https://github.com/lupcorrea/raster-project" class="project-panel"><img class="project-panel" src="res/rasteriser.png"></a>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="project-panel" src="res/cg-pipeline.png">
+                                        <a href="https://github.com/lupcorrea/cg-pipeline" class="project-panel"><img class="project-panel" src="res/cg-pipeline.png"></a>
                                     </div>
                                     <div class="col-md-3">
-                                        <img class="project-panel" src="res/m3.png">
+                                        <a href="https://github.com/lupcorrea/MyMovieManager" class="project-panel"><img class="project-panel" src="res/m3.png"></a>
                                     </div>
                                 </div>
                             </div>
