--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                     </div>
                     
                     <div class="row" style="height:75%;">
-                        <!-- Finished Projects -->
+                        <!-- Ongoing Projects -->
                         <div class="col-md-6" id="ongoing-projects">
                             <div class="row center-text" style=""><h4 style="color:white;"><b>Ongoing Projects</b></h4></div>
                             <div class="row">
@@ -433,7 +433,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Finished Projects -->
+                        <!-- Ongoing Projects -->
                         
                         <!-- Finished Projects -->
                         <div class="col-md-6" id="finished-projects">
